Fix overflow display issue in navstrip

--- a/css/main.css
+++ b/css/main.css
@@ -907,7 +907,7 @@ input[type="submit"] {
   padding: 10px;
   border-radius: 5px;
   transition: 0.5s;
-  max-width: 250px;
+  max-width: 225px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
